<resources>
    <string name="app_name">StarWars</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="people">People</string>
    <string name="films">Films</string>
    <string name="planets">Planets</string>
    <string name="species">Species</string>
    <string name="starships">Starships</string>
    <string name="vehicles">Vehicles</string>
</resources>